Finalized SQLite persistence with CSV seeding, extra persistence tests, and misc formatting/commenting